objects/TimeEntry__c.object
<CustomObject>
    <fields>
        <fullName>Billable_Rate__c</fullName>
        <label>Billable Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HarvestId__c</fullName>
        <externalId>true</externalId>
        <label>HarvestId</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>TimeEntries</relationshipLabel>
        <relationshipName>TimeEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rounded_Hours__c</fullName>
        <label>Rounded Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>TimeEntries</relationshipLabel>
        <relationshipName>TimeEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Time Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Team_Member__c</columns>
        <columns>Rounded_Hours__c</columns>
        <columns>Billable_Rate__c</columns>
        <columns>HarvestId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Time Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeEntries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>